[gd_scene load_steps=25 format=3 uid="uid://bfggqu7blrxpi"]

[ext_resource type="Script" uid="uid://bpasg15ngi7od" path="res://AssetBundle/ABplayer.gd" id="1_84at7"]
[ext_resource type="Texture2D" uid="uid://c1g8atljii1ea" path="res://AssetBundle/Sprites/Foxy.png" id="1_qgpu4"]
[ext_resource type="PackedScene" uid="uid://dwhddah7djwsk" path="res://AssetBundle/bullet.tscn" id="2_j03m6"]
[ext_resource type="AudioStream" uid="uid://b02hocewb3uhu" path="res://AssetBundle/Audio/Gun.mp3" id="4_hovdx"]
[ext_resource type="AudioStream" uid="uid://cbcxsdgvn03ji" path="res://AssetBundle/Audio/GameOver.mp3" id="5_wqtkn"]
[ext_resource type="AudioStream" uid="uid://ckx8id2xfxjoh" path="res://AssetBundle/Audio/Running.mp3" id="6_y4hpu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2q121"]
atlas = ExtResource("1_qgpu4")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j03m6"]
atlas = ExtResource("1_qgpu4")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hovdx"]
atlas = ExtResource("1_qgpu4")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqtkn"]
atlas = ExtResource("1_qgpu4")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4hpu"]
atlas = ExtResource("1_qgpu4")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq2rh"]
atlas = ExtResource("1_qgpu4")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_84at7"]
atlas = ExtResource("1_qgpu4")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh4vy"]
atlas = ExtResource("1_qgpu4")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se6gu"]
atlas = ExtResource("1_qgpu4")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyf8m"]
atlas = ExtResource("1_qgpu4")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u102"]
atlas = ExtResource("1_qgpu4")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u83a8"]
atlas = ExtResource("1_qgpu4")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhhwo"]
atlas = ExtResource("1_qgpu4")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7uoh"]
atlas = ExtResource("1_qgpu4")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j03y"]
atlas = ExtResource("1_qgpu4")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2gcu"]
atlas = ExtResource("1_qgpu4")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5u102"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q121")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j03m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hovdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqtkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4hpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq2rh")
}],
"loop": true,
"name": &"game_over",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_84at7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh4vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se6gu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyf8m")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u102")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u83a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhhwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7uoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j03y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2gcu")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_84at7"]
radius = 12.0416

[node name="ABPlayer" type="CharacterBody2D"]
script = ExtResource("1_84at7")
move_speed = 100.0
bullet_scene = ExtResource("2_j03m6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5u102")
animation = &"game_over"
autoplay = "idle"
frame_progress = 0.269139

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_84at7")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hovdx")

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wqtkn")
volume_db = 5.0

[node name="RunningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y4hpu")

[node name="reload" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_fire"]
[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
